# CloudLog

./: .gitignore  CloudLog.postman_collection.json  README.md  deploy.sh
cloud_logger/: README.md  pyproject.toml
cloud_logger/cloud_logger/: __init__.py  factory.py  handler.py
cloud_logger/cloudlogger/: __init__.py  cloudlog_handler.py
cloud_logger/tests/: test_handler.py  test_placeholder.py
cloudlog_commons/: README.md  pyproject.toml
cloudlog_commons/cloudlog_commons/: __init__.py  database.py  exceptions.py  log.py  log_queue.py  log_sender.py  logger.py  types.py
cloudlog_commons/cloudlog_commons/cloud/: __init__.py  database.py  exceptions.py  log.py
cloudlog_commons/cloudlog_commons/services/: __init__.py  log_queue.py  sender.py
cloudlog_commons/cloudlog_commons/shared/: __init__.py  log.py  logger.py
cloudlog_commons/tests/: test_log.py
infra/: README.md  api_gateway.tf  dynamodb.tf  lambda_layer.tf  lambdas.tf  locals.tf  providers.tf  s3.tf  sqs.tf  vpc.tf
infra/modules/lambda_service/: main.tf  output.tf  vars.tf
infra/openapi/: cloudlog_api.yaml
lambda/read_logs/: README.md  pyproject.toml
lambda/read_logs/read_logs/: database.py  exceptions.py  main.py  request.py  utils.py
lambda/read_logs/tests/: conftest.py  data.py  test_database.py  test_request.py
lambda/save_logs/: README.md  pyproject.toml
lambda/save_logs/save_logs/: main.py  utils.py
lambda/save_logs/tests/: conftest.py  test_handler.py  test_sqs_request.py  utils.py
log_sniffer/: .env.development  .env.production  README.md  package-lock.json  package.json
log_sniffer/public/: index.html  manifest.json
log_sniffer/src/: App.tsx  index.tsx  theme.tsx
log_sniffer/src/API/: base.ts  cloudlog.ts  hooks.ts  mockdata.ts
log_sniffer/src/components/: CredentialsInput.tsx  ErrorBanner.tsx  Header.tsx  Layout.tsx  MainPanel.tsx
log_sniffer/src/components/LogsList/: LogListItem.tsx  index.tsx
log_sniffer/src/components/QueryParams/: ParameterPanel.tsx  context.tsx
log_sniffer/src/models/: Log.ts  data.ts
logger_daemon/: Makefile  README.md  cloudlog.txt  pyproject.toml
logger_daemon/logger_daemon/: __main__.py  logs.py  main.py  worker.py
logger_daemon/tests/: server_mock.py  test_placeholder.py
test_app/: pyproject.toml
test_app/test_app/: __main__.py
