[tool.poetry]
name = "cloudlog-commons"
version = "0.1.0"
description = "common library for CLoudLog lambdas"
authors = ["Szymon Rykala <szymonrykala@gmail.com>"]
readme = "README.md"
packages = [{include = "cloudlog_commons"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
