[tool.poetry]
name = "cloudlog-commons"
version = "0.1.1"
description = "common library for CLoudLog lambdas"
authors = ["Szymon Rykala <szymonrykala@gmail.com>"]
readme = "README.md"
packages = [{include = "cloudlog_commons"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.109"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
