[tool.poetry]
name = "logger-daemon"
version = "0.1.0"
description = ""
authors = ["Szymon Rykala <szymonrykala@gmail.com>"]
readme = "README.md"
packages = [{include = "logger_daemon"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
