[tool.poetry]
name = "logger-daemon"
version = "0.1.62"
description = ""
authors = ["Szymon Rykala <szymonrykala@gmail.com>"]
readme = "README.md"
packages = [{include = "logger_daemon"}]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "7.3.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
