[tool.poetry]
name = "logger-daemon"
version = "0.1.0"
description = ""
authors = ["Szymon Rykala <szymonrykala@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cloudlog-commons = {path = "../cloudlog_commons", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "7.3.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
