[tool.poetry]
name = "save-logs"
version = "0.1.0"
description = ""
authors = ["Szymon Rykala <szymonrykala@gmail.com>"]
readme = "README.md"
packages = [{include = "save_logs"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
