[tool.poetry]
name = "save-logs"
version = "0.1.0"
description = ""
authors = ["Szymon Rykala <szymonrykala@gmail.com>"]
readme = "README.md"
packages = [{include = "save_logs"}]

[tool.poetry.dependencies]
python = "^3.10"
cloudlog-commons = {path = "/home/szymon/Projects/CloudLog/cloudlog_commons", develop = true}
boto3 = "^1.26.109"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
autopep8 = "^2.0.2"
black = "^23.3.0"
moto = "^4.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
